tests/paczka1/fuzzy1/99995302.err
Error in line 2: j1qQC3Zga A285 56,9
Error in line 5: V9uY45C A323 0,5
Error in line 10: V9uY45C A285 33,8
Error in line 9: 3EUSRiib A323 64,9
Error in line 3: j1qQC3Zga A323 9,8
Error in line 12: 3EUSRiib A580 23,0
Error in line 21: j1qQC3Zga A580 12,8
Error in line 23: 3EUSRiib A285 55,8
Error in line 17: V9uY45C A580 78,2
Error in line 35: V9uY45C A285 3,6
Error in line 36: V9uY45C A580 95,9
